make user tests
